# layout_inspect

./: .editorconfig  .rustfmt.toml  Cargo.toml  LICENSE  README.md  config.toml  rust-toolchain
crates/builder/: Cargo.toml  build.rs
crates/entry/: Cargo.toml
crates/entry/src/: main.rs
crates/struct_inspect/src/: defs.rs  impls.rs  lib.rs  primitives.rs
crates/struct_inspect/tests/: boxes.rs  options.rs  vecs.rs
crates/struct_inspect_derive/: Cargo.toml
crates/test/src/: main.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs
experiment/: Cargo.toml
experiment/src/: main.rs
experiment2/: Cargo.toml
experiment2/src/: main.rs
experiment_derive/: Cargo.toml
layout_inspect/: Cargo.toml
layout_inspect/src/: defs.rs  impls.rs  lib.rs  primitives.rs
layout_inspect/tests/: boxes.rs  enums.rs  options.rs  others.rs  primitives.rs  structs.rs  vecs.rs
layout_inspect_derive/: Cargo.toml
layout_inspect_derive/src/: attrs.rs  enums.rs  lib.rs  rename.rs  structs.rs
scripts/: build.sh  build_verbose.sh  print_types.sh
struct_inspect/: Cargo.toml
struct_inspect/src/: defs.rs  impls.rs  inspect.rs  lib.rs  primitives.rs
struct_inspect/tests/: boxes.rs  enums.rs  options.rs  others.rs  primitives.rs  structs.rs  vecs.rs
struct_inspect_derive/: Cargo.toml
struct_inspect_derive/src/: enums.rs  lib.rs  structs.rs
test/: Cargo.toml
test/src/: main.rs
