[package]
name = "layout_inspect"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
layout_inspect_derive = { path = "../layout_inspect_derive" }
memoffset = { version = "0.6.5", features = ["unstable_const"] }
regex = { version = "1", optional = true }
serde = { version = "1.0", features = ["derive"] }

[features]
default = ["stable"]
stable = ["dep:regex"]
nightly = []
